test_output2.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:dataBindingTriggerDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:generateDebugRFile UP-TO-DATE
> Task :app:compileDebugKotlin NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:compileDebugJavaWithJavac UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:bundleDebugClassesToRuntimeJar UP-TO-DATE
> Task :app:bundleDebugClassesToCompileJar UP-TO-DATE
> Task :app:preDebugUnitTestBuild UP-TO-DATE
> Task :app:compileDebugUnitTestKotlin NO-SOURCE
> Task :app:javaPreCompileDebugUnitTest UP-TO-DATE

> Task :app:compileDebugUnitTestJavaWithJavac FAILED
C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\metadata\MetadataStripperTest.java:116: error: exception IOException is never thrown in body of corresponding try statement
        } catch (java.io.IOException e) {
          ^
C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\notifications\LocalNotificationsTest.java:39: error: cannot find symbol
        LocalNotifications.cancelConvertProgress(context);
                          ^
  symbol:   method cancelConvertProgress(Context)
  location: class LocalNotifications
2 errors

[Incubating] Problems report is available at: file:///C:/Users/mattv/AndroidStudioProjects/redact/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugUnitTestJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\metadata\MetadataStripperTest.java:116: error: exception IOException is never thrown in body of corresponding try statement
          } catch (java.io.IOException e) {
            ^
  C:\Users\mattv\AndroidStudioProjects\redact\app\src\test\java\com\doubleangels\redact\notifications\LocalNotificationsTest.java:39: error: cannot find symbol
          LocalNotifications.cancelConvertProgress(context);
                            ^
    symbol:   method cancelConvertProgress(Context)
    location: class LocalNotifications
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.3.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
25 actionable tasks: 1 executed, 24 up-to-date

BUILD FAILED in 1s
